# emomo

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CLOUDFLARE_R2_SETUP.md  DEPLOYMENT.md  Dockerfile  GEMINI.md  HUGGINGFACE_SPACES.md  QUICK_START.md  README.md  go.mod  go.sum  meme-library-roadmap.md  railway.json  render.yaml
.github/workflows/: sync_to_hf.yml
backend/: .dockerignore  .env.example  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md
backend/configs/: config.cloud.yaml.example  config.yaml
configs/: config.cloud.yaml.example  config.modelscope.yaml.example  config.prod.yaml  config.yaml  huggingface-spaces.env.example  prod.env.example
crawler/: README.md  pyproject.toml
crawler/src/emomo_crawler/: __init__.py  base.py  cli.py  config.py  staging.py
crawler/src/emomo_crawler/sources/: __init__.py  fabiaoqing.py
deployments/: README.md  docker-compose.prod.yml  docker-compose.yml
docs/: ADD_NEW_SOURCE.md  ARCHITECTURE.md  CLOUDFLARE_R2_SETUP.md  DATABASE_SCHEMA.md  DATA_INGEST_ARCHITECTURE.md  DEPLOYMENT.md  HUGGINGFACE_SPACES.md  INGEST.md  MULTI_EMBEDDING.md  QUERY_UNDERSTANDING_DESIGN.md  QUICK_START.md  README.md  crawler-and-ingest.md  logger-refactor-plan.md  meme-library-roadmap.md
frontend/: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  index.html  package-lock.json  package.json
migrations/: 20260105223657_migrate_meme_embedding_to_vectors.sql  20260107000000_add_meme_descriptions_ocr_text.sql
scripts/: check-data-dir.sh  import-data.sh  ingest-staging.sh  scraper.py  setup.sh  start.sh
(+109 files in other folders)
