[project]
name = "emomo-crawler"
version = "0.1.0"
description = "Meme crawler for emomo"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
emomo-crawler = "emomo_crawler.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emomo_crawler"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
